<resources>
    <string name="app_name">Happy Food</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign Up</string>
    <string name="fullname">FullName</string>
    <string name="email">Email</string>
    <string name="app_nameSQL">postSQL</string>
    <string name="Post">Post</string>
    <string name="HF">Happy Food</string>
    <string name="food">Food name</string>
    <string name="address">Address</string>
    <string name="descrise">Description</string>
    <string name="shop">Shop name</string>
    <string name="help">"Can not post ? "</string>
    <string name="login_here">Already have an acount? <u>login</u></string>


    <string name="facebook_app_id">398624008412381</string>
    <string name="fb_login_protocol_scheme">fb398624008412381</string>
    <string name="change_password">Change</string>
    <string name="new_password_confirm">New Password confirm</string>
    <string name="new_passwrod">New Password</string>
    <string name="forget_password">Forget Password</string>
    <string name="remember">Remember</string>
</resources>