<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/register"
    tools:context=".SignUp">

    <com.google.android.material.button.MaterialButtonToggleGroup
        android:id="@+id/btg_theme"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:baselineAligned="false"
        app:selectionRequired="true"
        app:singleSelection="true">


        <Button
            android:id="@+id/btnDefault"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Default"
            android:fontFamily="@font/poppinsbold"
            android:textColor="@color/white"
            android:textSize="16dp"
            />

        <Button
            android:id="@+id/btnLight"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Light"
            android:fontFamily="@font/poppinsbold"
            android:textColor="@color/white"
            android:textSize="16dp"
            />

        <Button
            android:id="@+id/btnDark"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Dark"
            android:fontFamily="@font/poppinsbold"
            android:textColor="@color/white"
            android:textSize="16dp"
            />

    </com.google.android.material.button.MaterialButtonToggleGroup>


    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="120dp"
        android:paddingLeft="100px"
        android:rotationX="7"
        android:text="@string/change_password"
        android:textSize="40dp"
        android:textStyle="bold"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginTop="30dp"
        android:hint="@string/username"
        android:fontFamily="sans-serif"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/txtUsername"
            android:drawableRight="@drawable/ic_user"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/dialog_bg"
            android:fontFamily="sans-serif"
            tools:ignore="TouchTargetSizeCheck"
            />



    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginTop="15dp"
        android:fontFamily="sans-serif"
        android:hint="@string/password"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout3">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/txtPassword"
            android:drawableRight="@drawable/ic_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/dialog_bg"
            android:fontFamily="sans-serif"
            tools:ignore="TouchTargetSizeCheck"

            />

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginTop="15dp"
        android:fontFamily="sans-serif"
        android:hint="@string/new_passwrod"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout3">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/txtNewPassword"
            android:drawableRight="@drawable/ic_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/dialog_bg"
            android:fontFamily="sans-serif"
            tools:ignore="TouchTargetSizeCheck"

            />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginTop="15dp"
        android:hint="@string/new_password_confirm"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout3">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/txtNewPasswordConfirm"
            android:drawableRight="@drawable/ic_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/dialog_bg"
            android:fontFamily="sans-serif"
            tools:ignore="TouchTargetSizeCheck"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="40sp">

            <Button
                android:id="@+id/btnChange"
                android:text="@string/change_password"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:background="@drawable/custom_button"
                android:fontFamily="sans-serif"
                android:textSize="13dp"
                android:textStyle="bold"
                android:textColor="@color/purple_200"

                />

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:background="@drawable/custom_button"
            android:fontFamily="sans-serif"
            android:text="Login"
            android:textSize="13dp"
            android:textStyle="bold"
            android:layout_marginLeft="90dp"
            android:textColor="@color/purple_200"
            />

    </LinearLayout>

</LinearLayout>