<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/login"
    tools:context=".Login">


    <com.google.android.material.button.MaterialButtonToggleGroup
        android:id="@+id/btg_theme"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:baselineAligned="false"
        app:selectionRequired="true"
        app:singleSelection="true">


        <Button
            android:id="@+id/btnDefault"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16dp"
            android:fontFamily="@font/poppinsbold"

            android:textColor="@color/white"

            android:text="Default"

            />

        <Button
            android:id="@+id/btnLight"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16dp"
            android:fontFamily="@font/poppinsbold"

            android:textColor="@color/black"
            android:text="Light"

            />

        <Button
            android:id="@+id/btnDark"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppinsbold"
            android:textSize="16dp"
            android:textColor="@color/black"
            android:text="Dark" />

    </com.google.android.material.button.MaterialButtonToggleGroup>


    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:layout_marginTop="120dp"
        android:paddingLeft="100px"
        android:rotationX="7"
        android:textSize="40dp"
        android:textStyle="bold"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"

        />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="40dp"
        android:fontFamily="sans-serif"
        android:hint="@string/username"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <com.google.android.material.textfield.TextInputEditText
            android:drawableRight="@drawable/ic_user"
            android:id="@+id/txtUsername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif"
            tools:ignore="TouchTargetSizeCheck"
            android:background="@drawable/dialog_bg"
            />


    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="16dp"
        android:layout_marginRight="40dp"
        android:fontFamily="sans-serif"
        android:hint="@string/password"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout3">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/txtPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableRight="@drawable/ic_password"
            android:background="@drawable/dialog_bg"
            android:fontFamily="sans-serif"
            tools:ignore="TouchTargetSizeCheck"
            android:password="true"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20sp">


        <TextView
            android:id="@+id/txtForget"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="255sp"
            android:layout_marginTop="20sp"
            android:text="Forget password ?"
            android:textColor="@color/white"

            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="40sp">


    <Button
        android:id="@+id/btnSignup"
        android:text="Register"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:background="@drawable/custom_button"
        android:fontFamily="sans-serif"
        android:textColor="@color/purple_200"
        android:textSize="13dp"
        android:textStyle="bold"

        />

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:background="@drawable/custom_button"
            android:fontFamily="sans-serif"
            android:text="Login"
            android:textSize="13dp"
            android:textStyle="bold"
            android:layout_marginLeft="90dp"
            android:textColor="@color/purple_200"
            />

    </LinearLayout>

    <ImageButton
        android:id="@+id/btnLoginSM"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:background="@color/white"
        android:src="@drawable/logfb"
         />


</LinearLayout>